Editted validation page

--- a/validation.html
+++ b/validation.html
@@ -13,5 +13,13 @@
             <a href="readme.html">README</a>
             <a class="active" href="#validation">VALIDATION</a>
         </header>
+        <div id="htmlValidator">
+            <h2>HTML Validation</h2>
+            <img src="html_validation.PNG" alt="">
+        </div>
+        <div id="cssValidator">
+            <h2>CSS Validation</h2>
+            <img src="css_validation.PNG" alt="">
+        </div>
     </body>
 </html>
