adding readme page

--- a/readme.html
+++ b/readme.html
@@ -13,5 +13,14 @@
             <a class="active" href="#readme">README</a>
             <a href="validation.html">VALIDATION</a>
         </header>
+        <body class="readmeBody">
+            <h2>Step 1: Push the repository to github.</h2>
+            <img src="step1.PNG" alt="Step 1" class="readmeSteps">
+            <h2>Step 2: Go to GitHub Pages in Settings</h2>
+            <p>.Select source and publish site</p>
+            <img src="step2.PNG" alt="Step 2" class="readmeSteps">
+            <h2>Step 3: publish site</h2>
+            <img src="step3.PNG" alt="Step 3" class="readmeSteps">
+        </body>
     </body>
 </html>
